8286490: JvmtiEventControllerPrivate::set_event_callbacks CLEARING_MASK computation is incorrect